# ml-delivery-time-prediction

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  cloudbuild.yaml  pyproject.toml
data/processed/: X_test.parquet  X_train.parquet  deliveries.parquet  pps_predictors.parquet  results.parquet  y_test.parquet  y_train.parquet
data/raw/: raw_data_dict.json  relatorio-logistica_13f59604db1f9380e2726aafd11956bc3a58f53cc20621d73cceb2d640dfe574_2025-08-09-2025-11-06.xlsx  relatorio-logistica_7a352e9e6369c5f0d52518a28c2898941115ff9e40e82f8dea9e3814d5184c26_2025-08-09-2025-11-06.xlsx  relatorio-logistica_91e91db298c859ace172cb1769a8c69b104ca0df0e4826439f2dc7664278a960_2025-08-09-2025-11-06.xlsx  relatorio-logistica_cde1a059d0fc30767407625ff37c3cf6c2b0708f0785375859334aebbe943c58_2025-08-09-2025-11-06.xlsx
models/: preprocessing_pipeline.pkl
notebooks/: 1.0-eda.ipynb  2.0-machine_learning.ipynb
resources/papers/: sbc-template.aux  sbc-template.fdb_latexmk  sbc-template.fls  sbc-template.tex
resources/reports/: deliveries_data_profile_report.html
resources/visualizations/: tree_regressor
src/configs/: settings.py
src/streamlit/: business_understanding.py  data_preparation.py  data_understanding.py  deployment.py  modelling_and_evaluation.py  playground.py
