[project]
name = "delivery-time-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "dtreeviz>=2.2.2",
    "feature-engine>=1.9.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "klib>=1.3.2",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "ppscore>=1.1.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.51.0",
    "unidecode>=1.4.0",
    "xgboost>=3.1.1",
    "ydata-profiling>=4.17.0",
    "yellowbrick>=1.5",
]
